...
        present(navigationController, animated: true)
    }
    
    // MARK: - Alert
    
    private func showUsernameAlert() {
        let alert = UIAlertController(title: "Wrong Username", message: "Username need to have 6 or more characters.", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok", style: .default))
        
        present(alert, animated: true)
    }
    
    private func showPasswordAlert() {
...
